[project]
name = "acmchat-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.13",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "python-multipart>=0.0.20",
    "ruff>=0.12.0",
    "uvicorn>=0.34.3",
]
